# double-pendulum-sandbox

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: index.md  installation.md  usage.md
src/double_pendulum_sandbox/: __init__.py  cli.py
tests/: __init__.py  test_double_pendulum_sandbox.py
