[project]
name = "double-pendulum-sandbox"
version = "0.1.0"
description = "An app that asinulates a double pendulum with sliders to adjust various input parameters."
readme = "README.md"
authors = [
  {name = "Ethan M. Cannaert", email = "emcannaert@ucdavis.edu"}
]
maintainers = [
  {name = "Ethan M. Cannaert", email = "emcannaert@ucdavis.edu"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/emcannaert/double_pendulum_sandbox/issues"
changelog = "https://github.com/emcannaert/double_pendulum_sandbox/blob/master/changelog.md"
homepage = "https://github.com/emcannaert/double_pendulum_sandbox"

[project.scripts]
double_pendulum_sandbox = "double_pendulum_sandbox.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
